--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой сайт</title>
+    <title>CV</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Добро пожаловать на мой сайт!</h1>
+    <h1>Daria Pusovskaya</h1>
+    <h2>Junior Frontend Developer</h2>
+
+    <h3>Contact information:</h3>
+    <ol><b>Phone:</b> +375256882448</ol>
+    <ol><b>E-mail:</b>pusovskajadn@gmail.com</ol>
+    <ol><b>Telegram:</b>@neishimenya</ol>
+    
     <p>Это базовый шаблон HTML.</p>
 </body>
 </html>
