fix: Failed HTML requirements

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <h2>Junior Frontend Developer</h2>
 
     <h3>Contact information:</h3>
-    <ol><b>Phone:</b> +375256882448</ol>
-    <ol><b>E-mail:</b>pusovskajadn@gmail.com</ol>
-    <ol><b>Telegram:</b>@neishimenya</ol>
+    <ol>Phone: +375256882448</ol>
+    <ol>E-mail:pusovskajadn@gmail.com</ol>
+    <ol>Telegram:@neishimenya</ol>
     
     <p>Это базовый шаблон HTML.</p>
 </body>
 </html>
-
