Сверстала CV на языках HTML и CSS

--- a/index.html
+++ b/index.html
@@ -3,18 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
+    <title>Daria Pusovskaya CV</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+    <link rel="manifest" href="assets/site.webmanifest">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Daria Pusovskaya</h1>
-    <h2>Junior Frontend Developer</h2>
+    <div class="container">
+    <div class="two-columns">
+        <div class="left-column">
+        <header>
+            <img src="AZBA1288.JPG" width="230" height="230" alt="my photo" />
+            <h1>Daria Pusovskaya</h1>
+            <h2>Junior Frontend Developer</h2>
+        </header>
+        <main>
+                <h3>Contact information:</h3>
+                <ul><b>Phone:</b> +375256882448</ul>
+                <ul><b>E-mail:</b> pusovskajadn@gmail.com</ul>
+                <ul><b>Telegram:</b>@neishimenya</ul>
+        </main>
+        </div>
 
-    <h3>Contact information:</h3>
-    <ol><b>Phone:</b> +375256882448</ol>
-    <ol><b>E-mail:</b>pusovskajadn@gmail.com</ol>
-    <ol><b>Telegram:</b>@neishimenya</ol>
-    
-    <p>Это базовый шаблон HTML.</p>
+        <aside class="right-column">
+            <section class="briefly-about">
+                <div class="sub-header">
+                <h3>Briefly About Myself:</h3>
+                <p>In 2019, I graduated from the Belarusian State Technological University with a degree in Certification Engineering. I worked in the food industry for two years as a Quality Engineer. From 2023 to 2024, I ran my own business. Since 2025, I have been studying IT-related specialties.</p>
+                </div>
+            </section>
+            <section class="skills">
+                <div class="sub-header">
+                <h3>Skills and Proficiency:</h3>
+                <ul><li>HTML5, CSS3</li></ul>
+                <ul><li>JavaScript Basics</li></ul>
+                <ul><li>Git, GitHub</li></ul>
+                <ul><li>VS Code</li></ul>
+                </div>
+            </section>
+             <section class="code">
+                <div class="sub-header">
+                    <h3>Code example:</h3>
+                    <p>JavaScript code example:</p>
+                    <pre><code class="language-javascript">
+                  function evenOrOdd(number) {
+                    if (number % 2 === 0) {
+                      return 'Even'
+                    }
+                    else if (number % 2 !== 0) {
+                      return 'Odd'
+                    }
+                  }
+                    </code></pre>
+                </div>
+             </section>  
+             <section class="courses">
+                <div class="sub-header">
+                    <h3>Courses:</h3>
+                    <ul><li>RC-School JS/FE Pre-School</li></ul>
+                </div>
+             </section> 
+            <section class="languages">
+                <div class="sub-header">
+                    <h3>Languages:</h3>
+                    <ul><li>Russian - Native</li></ul>
+                    <ul><li>English - Upper Intermediate (in progress)</li></ul>
+                    <ul><li>Ukrainian - Intermediate</li></ul>
+                    <ul><li>German - Basic (in progress)</li></ul>  
+                </div>
+            </section>
+        </aside>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/prism.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-javascript.min.js"></script>
 </body>
+<footer>
+    <div class="github">
+        <img class="github-icon" src="C:\Users\Marina\Desktop\codetraining\rsschool-cv\assets\GitHub-logo.png" alt="GitHub-icon" width="85px" height="65px">
+    <a href="https://github.com/dariapusovskaya" class="link">Мой GitHub</a>
+    </div>
+    <p>2025</p>
+    <div class="cours">
+        <img src="C:\Users\Marina\Desktop\codetraining\rsschool-cv\assets\images.png" alt="rsschool-icon" width="100px" height="50px">
+    <a href="https://rs.school/courses/javascript-ru" class="link_cours">Cours</a>
+    </div>
+</footer>
 </html>
