fix bads with tags

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism.css" rel="stylesheet" >
 </head>
 <body>
     <div class="container">
     <div class="two-columns">
         <div class="left-column">
         <header>
-            <img src="assets/AZBA1288.JPG" width="230" height="230" alt="my photo" />
+            <img src="assets/AZBA1288.JPG" width="230" height="230" alt="my photo" >
             <h1>Daria Pusovskaya</h1>
             <h2>Junior Frontend Developer</h2>
         </header>
         <main>
                 <h3>Contact information:</h3>
-                <ul><b>Phone:</b> +375256882448</ul>
-                <ul><b>E-mail:</b> pusovskajadn@gmail.com</ul>
-                <ul><b>Telegram:</b>@neishimenya</ul>
+               <p><b>Phone:</b> +375256882448</p>
+               <p><b>E-mail:</b> pusovskajadn@gmail.com</p>
+               <p><b>Telegram:</b> @neishimenya</p>
         </main>
         </div>
 
@@ -80,18 +80,19 @@
             </section>
         </aside>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/prism.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-javascript.min.js"></script>
-</body>
+    </div>
 <footer>
     <div class="github">
-        <img class="github-icon" src="C:\Users\Marina\Desktop\codetraining\rsschool-cv\assets\GitHub-logo.png" alt="GitHub-icon" width="85px" height="65px">
+        <img class="github-icon" src="C:\Users\Marina\Desktop\codetraining\rsschool-cv\assets\GitHub-logo.png" alt="GitHub-icon" width="85p" height="65p">
     <a href="https://github.com/dariapusovskaya" class="link">Мой GitHub</a>
     </div>
     <p>2025</p>
     <div class="cours">
-        <img src="C:\Users\Marina\Desktop\codetraining\rsschool-cv\assets\images.png" alt="rsschool-icon" width="100px" height="50px">
+        <img src="C:\Users\Marina\Desktop\codetraining\rsschool-cv\assets\images.png" alt="rsschool-icon" width="100p" height="50p">
     <a href="https://rs.school/courses/javascript-ru" class="link_cours">Cours</a>
     </div>
 </footer>
+     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/prism.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-javascript.min.js"></script>
+ </body>
 </html>
