--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </div>
     <p>2025</p>
     <div class="cours">
-        <img src="assets/images.png" alt="rsschool-icon" width="100px" height="50px">
+        <img src="assets/GitHub-logo.png" alt="rsschool-icon">
     <a href="https://rs.school/courses/javascript-ru" class="link_cours">Cours</a>
     </div>
 </footer>
