--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
     </div>
 <footer>
     <div class="github">
-        <img class="github-icon" src="assets\GitHub-logo.png" alt="GitHub-icon" width="85" height="65">
+        <img src="assets/GitHub-logo.png" alt="GitHub-icon" width="85" height="65">
     <a href="https://github.com/dariapusovskaya" class="link">Мой GitHub</a>
     </div>
     <p>2025</p>
     <div class="cours">
-        <img src="assets\images.png" alt="rsschool-icon" width="100" height="50">
+        <img src="assets/images.png" alt="rsschool-icon" width="100" height="50">
     <a href="https://rs.school/courses/javascript-ru" class="link_cours">Cours</a>
     </div>
 </footer>
